--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "demo-shop",
   "version": "0.1.0",
   "private": true,
+  "main": ".src/index.js",
   "scripts": {
     "run:server": "node ./src/index.js",
     "run:worker": "node ./src/index-worker.js",
